2016-09-17 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.1
  * fix parsing/generating file options in WITH/WITHOUT syntax
  * release 0.1.0
  * add support for ancient FreeBSDs (>=9.0)
2016-09-16 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.11
  * fixed incompatibility with puppet 2.7 (execpipe)
2016-09-15 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.10
  * fixed incompatibilities with ruby 1.8
2016-05-19 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.9 [created because 0.0.8 is deleted on forge.puppetlabs.com]
  * release 0.0.8
  * fixed path to ports in Vagrantfile
  * release 0.0.7
  * removed deprecated Modulefile
  * Vagrantfile: provision freebsd with ports initialized
  * correct .gitignore to be properly handled by "puppet module build"
  * release 0.0.6
  * added Vagrantfile to simplify manual testing on FreeBSD VMs
  * added metadata.json to allow new features of forge.puppetlabs.com
  * added few notes to README.rst
2016-03-18 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.5
  * correct projects www address in Modulefile
  * release 0.0.4
  * run tests on travis-ci on more versions of ruby and puppet
  * adjust tests to run smoothly on rspec 3.x
  * cleaned up code
2016-03-18 Pavel N. Savenkov <amentain@users.noreply.github.com>
  * updated options.rb to accept option names starting with a digit
2013-02-03 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * changed yardoc config to use github flavored markdown
2014-01-19 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.3
  * fixed some links in README.md
2014-01-18 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.2
  * fixed bug with withenv method
  * release 0.0.1
  * initial commit