@@ -1,4 +1,5 @@
 2016-09-17 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * fix options_file_default_syntax to return :with_without instead of :with
   * release 0.1.1
   * fix parsing/generating file options in WITH/WITHOUT syntax
   * release 0.1.0
